# rtos_stm32_nucleo_f411re

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  Makefile  PROJECT_STRUCTURE.md  README.md  SESSION_2025-04-27.md  final.map  main.c  main.h  main.s
BSP/: CMakeLists.txt
BSP/Inc/: bsp.h  led.h
BSP/Src/: bsp.c  led.c
BSP/stm32f411_nucleo/: platform_config.h
Core/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  cbuf.h  stm32f4xx_hal_conf.h
Core/Inc/tasks/: consumer_task.h  producer_task.h  sd_task.h
Core/Src/: cbuf.c  main.c
Core/Src/tasks/: consumer_task.c  producer_task.c  sd_task.c
Drivers/: CMakeLists.txt
Drivers/sd_card/: CMakeLists.txt
Drivers/sd_card/Inc/: sd_card.h
Drivers/sd_card/Src/: diskio.c  sd_card.c
HAL/: CMakeLists.txt
HAL/Inc/: hal_spi.h
HAL/Src/: hal_spi.c
Linker/: stm32_ls.ld
Startup/: CMakeLists.txt  stm32_startup.c
cmake/: arm-none-eabi-gcc.cmake
docs/: SD_CARD_NOTES.md  SPI_NOTES.md
